# volo-boot

./: README.md
api/: Cargo.toml  Dockerfile  cargo-source.toml
api/config/: app_config.toml
api/src/: app_config.rs  consts.rs  lib.rs  prometheus.rs  rate_limiter.rs  router.rs  svc_discover.rs
api/src/controller/: mod.rs  order_controller.rs  random_controller.rs  user_controller.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/rate_limiter/: memory_rate_limiter.rs  mod.rs
common/src/svc/: nacos.rs
rpc/order/: Cargo.toml  Dockerfile
rpc/order/config/: app_config.toml
rpc/order/idl/: order.proto
rpc/order/src/: app_config.rs  lib.rs
rpc/user/: Cargo.toml
rpc/user/config/: app_config.toml
rpc/user/src/: lib.rs
