[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# we recommend to use the latest framework version for new features and bug fixes
volo = "*"
volo-http = { version = "*", features = ["default_server"] }
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["default", "derive"] }
# common = {path = "../common"}
pd-rs-common = {version = "0.1"}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "*"
bincode="2"
anyhow = "1"
async-broadcast="0.7"
metrics = { version = "0.24", default-features = false }
metrics-exporter-prometheus = { version = "0.16", default-features = false }
lazy_static = "1.5"
dashmap = { version = "6.1", features = ["serde"] }
tokio-cron-scheduler = "*"
nacos-sdk = { version = "0.5", features = ["default"] }
regex="1.11"
mur3="0.1"

# rpc客户端引用
user = {path = "../rpc/user"}
order = {path = "../rpc/order"}

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
