[package]
name = "user"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
user-volo-gen = { path = "./volo-gen" }

volo.workspace = true
volo-grpc.workspace = true
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true

# 需要手动加的依赖 -- begin --
tracing = "0.1"
pd-rs-common = {version = "0.1"}
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5", features = ["default", "derive"] }
# 需要手动加的依赖 -- end --

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

[workspace]
members = ["volo-gen"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
# we recommend to use the latest framework version for new features and bug fixes
volo = "*"
volo-build = "*"
volo-grpc = "*"
pilota = "*"
futures = "0.3"
tokio = "1"
anyhow = "1"

# 需要手动加的依赖 -- begin --
serde = { version = "1", features = ["derive"] }
# 需要手动加的依赖 -- end --
